--- a/LavaMex/package.json
+++ b/LavaMex/package.json
@@ -20,6 +20,7 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
+    "@ionic-native/calendar": "^4.5.3",
     "@ionic-native/core": "4.4.0",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/google-maps": "^4.5.2",
@@ -29,6 +30,7 @@
     "@ionic/storage": "2.1.3",
     "cordova-android": "7.0.0",
     "cordova-browser": "5.0.3",
+    "cordova-plugin-calendar": "^5.0.0",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-geolocation": "^4.0.1",
     "cordova-plugin-googlemaps": "^2.1.1",
@@ -60,7 +62,8 @@
       "cordova-plugin-whitelist": {},
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
-      "cordova-plugin-ionic-webview": {}
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-calendar": {}
     },
     "platforms": [
       "browser",
