--- a/LavaMex/package.json
+++ b/LavaMex/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^5.2.6",
     "@ionic-native/calendar": "^4.5.3",
     "@ionic-native/core": "4.4.0",
+    "@ionic-native/facebook": "^4.6.0",
     "@ionic-native/geolocation": "^4.5.2",
     "@ionic-native/google-maps": "^4.5.2",
     "@ionic-native/http": "^4.5.3",
